assets/screen.scss
/* Welcome to Compass.
 * In this file you should write your main styles. (or centralize your imports)
 * Import this file using the following HTML or equivalent:
 * <link href="/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" /> */

// @import "compass/reset";

@import "../bower_components/bootstrap-sass-official/assets/stylesheets/bootstrap";
@import "../bower_components/fontawesome/scss/font-awesome.scss";
@import "variable";
@import "override_bootstrap";
@import "atomic";
@import "header";
@import "sidebar";
@import "breadcrumb";
  

body {
	overflow-y: scroll;
	overflow-x: auto;
}

html, body {
	height: 100%;
	min-height: 100%;
}

#wrapper {
  position: relative;
  display: block;
  min-width: 1200px;
  height: 100%;
}

#page-content-wrapper {
  margin-left: $sidebar-width;
  position: relative;
}

#page-body-wrapper {
  padding-top: 30px;
}

.button-white {
  width: 80px;
  height: 34px;
  color:  $blue;
}
.button-blue {
  width: 120px;
  height: 34px;
  background: $blue;
  color:  $white;
}

@import "add_product_page";

